// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on checked row 1`] = `
<div
  className="group checked"
  id="name_group"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-name"
    >
      <div
        className="group-check checked"
      >
        <CheckboxCheckedIcon />
      </div>
      <span>
        name
      </span>
    </div>
    <div
      className="group-content"
    >
      <span
        className="group-description"
      >
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon fa fa-unlink"
          />
          <MemoizedFormattedMessage
            defaultMessage="Not Linked"
            id="admin.group_settings.group_row.not_linked"
          />
        </a>
      </span>
      <span
        className="group-actions"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on failed linked row 1`] = `
<div
  className="group "
  id="name_group"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-name"
    >
      <div
        className="group-check "
      />
      <span>
        name
      </span>
    </div>
    <div
      className="group-content"
    >
      <span
        className="group-description"
      >
        <a
          className="warning"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon fa fa-exclamation-triangle"
          />
          <MemoizedFormattedMessage
            defaultMessage="Unlink failed"
            id="admin.group_settings.group_row.unlink_failed"
          />
        </a>
      </span>
      <span
        className="group-actions"
      >
        <Link
          id="name_configure"
          to="/admin_console/user_management/groups/group-id"
        >
          <MemoizedFormattedMessage
            defaultMessage="Configure"
            id="admin.group_settings.group_row.configure"
          />
        </Link>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on failed not linked row 1`] = `
<div
  className="group "
  id="name_group"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-name"
    >
      <div
        className="group-check "
      />
      <span>
        name
      </span>
    </div>
    <div
      className="group-content"
    >
      <span
        className="group-description"
      >
        <a
          className="warning"
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon fa fa-exclamation-triangle"
          />
          <MemoizedFormattedMessage
            defaultMessage="Link failed"
            id="admin.group_settings.group_row.link_failed"
          />
        </a>
      </span>
      <span
        className="group-actions"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on linked and configured row 1`] = `
<div
  className="group "
  id="name_group"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-name"
    >
      <div
        className="group-check "
      />
      <span>
        name
      </span>
    </div>
    <div
      className="group-content"
    >
      <span
        className="group-description"
      >
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon fa fa-link"
          />
          <MemoizedFormattedMessage
            defaultMessage="Linked"
            id="admin.group_settings.group_row.linked"
          />
        </a>
      </span>
      <span
        className="group-actions"
      >
        <Link
          id="name_edit"
          to="/admin_console/user_management/groups/group-id"
        >
          <MemoizedFormattedMessage
            defaultMessage="Edit"
            id="admin.group_settings.group_row.edit"
          />
        </Link>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on linked but not configured row 1`] = `
<div
  className="group "
  id="name_group"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-name"
    >
      <div
        className="group-check "
      />
      <span>
        name
      </span>
    </div>
    <div
      className="group-content"
    >
      <span
        className="group-description"
      >
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon fa fa-link"
          />
          <MemoizedFormattedMessage
            defaultMessage="Linked"
            id="admin.group_settings.group_row.linked"
          />
        </a>
      </span>
      <span
        className="group-actions"
      >
        <Link
          id="name_configure"
          to="/admin_console/user_management/groups/group-id"
        >
          <MemoizedFormattedMessage
            defaultMessage="Configure"
            id="admin.group_settings.group_row.configure"
          />
        </Link>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow should match snapshot, on not linked row 1`] = `
<div
  className="group "
  id="name_group"
  onClick={[Function]}
>
  <div
    className="group-row"
  >
    <div
      className="group-name"
    >
      <div
        className="group-check "
      />
      <span>
        name
      </span>
    </div>
    <div
      className="group-content"
    >
      <span
        className="group-description"
      >
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          <i
            className="icon fa fa-unlink"
          />
          <MemoizedFormattedMessage
            defaultMessage="Not Linked"
            id="admin.group_settings.group_row.not_linked"
          />
        </a>
      </span>
      <span
        className="group-actions"
      />
    </div>
  </div>
</div>
`;
